// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container> render container 1`] = `
<container__Wrapper>
  <container__Main
    className="AASidebar "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <container__LogoLink
      className=""
      href="/home"
    >
      <container__LogoMini
        className=""
      >
        <Logo__Logo
          mini={true}
        />
      </container__LogoMini>
      <container__LogoDefault
        className=""
      >
        <Logo__Logo />
      </container__LogoDefault>
    </container__LogoLink>
    <container__Content
      className=""
    >
      test
    </container__Content>
  </container__Main>
</container__Wrapper>
`;

exports[`<Container> render container 2`] = `
<container__Wrapper
  isCollapsable={true}
>
  <container__Main
    className="AASidebar is-collapsable"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <container__LogoLink
      className="is-collapsable"
      href="/home"
    >
      <container__LogoMini
        className="is-collapsable"
      >
        <Logo__Logo
          mini={true}
          premium={true}
        />
      </container__LogoMini>
      <container__LogoDefault
        className="is-collapsable"
      >
        <Logo__Logo />
        <container__PremiumText>
          PREMIUM
        </container__PremiumText>
      </container__LogoDefault>
    </container__LogoLink>
    <container__Content
      className="is-collapsable"
    >
      test
    </container__Content>
  </container__Main>
  <container__Mask
    className="is-collapsable"
  />
</container__Wrapper>
`;

exports[`<Container> render container wrapper 1`] = `
<div
  className="container__Wrapper-wqy56f-0 iYknXe"
>
  <container__Main
    className="AASidebar "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <container__LogoLink
      className=""
      href="home"
    >
      <container__LogoMini
        className=""
      >
        <Logo__Logo
          mini={true}
        />
      </container__LogoMini>
      <container__LogoDefault
        className=""
      >
        <Logo__Logo />
      </container__LogoDefault>
    </container__LogoLink>
    <container__Content
      className=""
    >
      test
    </container__Content>
  </container__Main>
</div>
`;

exports[`<Container> render container wrapper 2`] = `
<div
  className="container__Wrapper-wqy56f-0 iYknXe"
>
  <container__Main
    className="AASidebar "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <container__LogoLink
      className=""
      href="home"
    >
      <container__LogoMini
        className=""
      >
        <Logo__Logo
          mini={true}
        />
      </container__LogoMini>
      <container__LogoDefault
        className=""
      >
        <Logo__Logo />
      </container__LogoDefault>
    </container__LogoLink>
    <container__Content
      className=""
    >
      test
    </container__Content>
  </container__Main>
</div>
`;

exports[`<Link> render sidebar link 1`] = `
<link__Wrapper
  className=""
  onClick={[Function]}
>
  <FlexGrid
    gutter="2px"
  >
    <div />
    <FlexGrid.Item
      flex={1}
    >
      <FlexGrid>
        <link__Version />
      </FlexGrid>
    </FlexGrid.Item>
  </FlexGrid>
</link__Wrapper>
`;

exports[`<Link> render sidebar link 2`] = `
<link__Wrapper
  className="is-active"
  onClick={null}
>
  <FlexGrid
    gutter="2px"
  >
    <div />
    <FlexGrid.Item
      flex={1}
    >
      <FlexGrid>
        <link__Version>
          beta
          new
        </link__Version>
      </FlexGrid>
    </FlexGrid.Item>
    <MdLockOutline
      size="14"
    />
    <AAIcon
      name="aa-connections"
    />
  </FlexGrid>
</link__Wrapper>
`;

exports[`<NavGroup> render NavGroup with title 1`] = `
<platform__NavGroupWrapper
  className="AASidebar-group"
>
  <platform__NavGroupTitle
    className="AASidebar-group-title"
    ellipsis={true}
  >
    App Store Rankings
  </platform__NavGroupTitle>
  <Link
    isActive={false}
    onClick={[Function]}
  >
    <platform__GroupItem
      ellipsis={true}
    >
      Overview
    </platform__GroupItem>
  </Link>
</platform__NavGroupWrapper>
`;

exports[`<NavGroup> render NavGroup without header 1`] = `
<platform__NavGroupWrapper
  className="AASidebar-group"
>
  <Link
    isActive={false}
    onClick={[Function]}
  >
    <platform__GroupItem
      ellipsis={true}
    >
      Overview
    </platform__GroupItem>
  </Link>
</platform__NavGroupWrapper>
`;

exports[`<Platform> render 1`] = `
<platform__Wrapper
  className="AASidebar-platform "
>
  <Link
    className="AASidebar-platform-title"
    icon={
      <AAIcon
        name="aa-caret-down"
      />
    }
    onClick={[Function]}
  >
    <platform__PlatformTitle
      ellipsis={true}
    />
  </Link>
  <platform__Content
    className="AASidebar-platform-content "
  >
    <NavGroup
      current="my_app_analytics_overview"
      items={
        Array [
          Object {
            "href": "/comparator/",
            "id": "my_app_analytics_overview",
            "title": "Overview",
          },
        ]
      }
      onClick={[Function]}
      title=""
    />
  </platform__Content>
</platform__Wrapper>
`;

exports[`<Sidebar> render sidebar 1`] = `
<Container
  isCollapsable={false}
  isPremium={false}
>
  <Link
    icon={
      <AAIcon
        name="aa-home"
      />
    }
    isActive={true}
  >
    <Text__Text
      ellipsis={true}
    />
  </Link>
  <Platform
    navGroup={
      Array [
        Object {
          "id": "analytics_navs",
          "items": Array [
            Object {
              "href": "/comparator/",
              "id": "my_app_analytics_overview",
              "title": "Overview",
            },
          ],
          "title": "",
        },
      ]
    }
    onClick={[Function]}
    title="My app analytics"
  />
</Container>
`;

exports[`<Sidebar> render sidebar without analytics subNavs 1`] = `
<Container
  isCollapsable={true}
  isPremium={true}
>
  <Link
    icon={
      <AAIcon
        name="aa-home"
      />
    }
    isActive={false}
  >
    <Text__Text
      ellipsis={true}
    />
  </Link>
  <Link
    icon={<AAIcon />}
    isActive={false}
    link="/comparator/landing/"
  >
    <Text__Text
      ellipsis={true}
      textTransform="uppercase"
    >
      My app analytics
    </Text__Text>
  </Link>
</Container>
`;
